--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
   </div>
   
   <button id="user" class="btn ms-5 mt-3 btn-primary">USER</button>
+  <button id="users" class="btn ms-5 mt-3 btn-primary">USER</button>
   <p id="p"></p>
   <script src="./js/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
